using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    //GameObject Tags
    public const string PLAYER = "Player";
    public const string ANIMATION_MANAGER = "AnimationManager";
    public const string BACKGROUND_AUDIO = "bgAudio";
    public const string AUDIO_MANAGER = "AudioManager";
    public const string LEADERBOARD_TABLE = "LeaderboardTable";
    public const string DATA_HANDLER = "DataHandler";
    public const string ROW = "Row";
    public const string NAME_INPUT_FIELD = "NameInputField";
    public const string TIME_TEXT = "TimeText";
    public const string SCORE_TEXT = "ScoreText";
    public const string RESULT_TEXT = "ResultText";
    public const string PLAYER_OUTFIT_PANEL = "PlayerOutfitsPanel";

    //Animations
    public const string PLAYER_WALK = "walk";
    public const string PLAYER_IDLE = "idle";
    public const string SCROLL_IN_PLAY = "ScrollInPlay";
    public const string SCROLL_OUT_PLAY = "ScrollOutPlay";
    public const string CAMERA_SHAKE = "CameraShake";
    public const string DONT_GET_HIT = "DGHPopUp";
    public const string PLAY_TO_PLAY = "PlayToPlay";
    public const string PLAY_TO_EDIT = "PlayToEdit";
    public const string LEADERBOARD_SCROLL_IN = "LeaderboardScrollIn";
    public const string LEADERBOARD_SCROLL_OUT = "LeaderboardScrollOut";
    public const string KEY_PRESSED = "KeyPressed";

    //Animation Parameters
    public const string GAME_OVER = "GameOver";
    public const string LEADERBOARD = "Leaderboard";
    public const string READY = "Ready";

    //Body Part Strings
    public const string HEAD_STRING = "head";
    public const string SHOULDERS_STRING = "shoulders";
    public const string TORSO_STRING = "torso";
    public const string ARMS_STRING = "arms";
    public const string LEGS_STRING = "legs";
    public const string CAPE_STRING = "cape";
    public const string SWORD_STRING = "sword";

    //File Paths
    public const string PLAYER_OUTFIT_FILE_PATH = "/PlayerOutfit.json";
    public const string LEADERBOARD_FILE_PATH = "/Leaderboard.json";

}

